Change theme for menu items

--- a/css/theme.css
+++ b/css/theme.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5 {
 
 }
 
-.links {
+.menu {
 
 	clear: right;
 
@@ -60,13 +60,13 @@ h1, h2, h3, h4, h5 {
 
 a {
 
-	color: #AE81FF;
+	color: #569CD6;
 
 }
 
 a:hover {
 
-	color: #E6DB74;
+	color: #DCDCAA;
 
 }
 
