Change heading padding

--- a/css/theme.css
+++ b/css/theme.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5 {
     /*color: #C586C0;*/
     color: #DCDCAA;
     margin: 10px 0px 0px 0px;
-
+    padding: 10px 0px 00px 0px;
 }
 
 .comment {
