--- a/css/theme.css
+++ b/css/theme.css
@@ -8,8 +8,8 @@ body {
     display: block;
     padding: 20px;
 
-    color: #d4d4d4;
-    background-color: #1e1e1e;
+    color: #ffffff;
+    background-color: #1e1e1ecc;
 
 }
 
@@ -35,7 +35,7 @@ div {
 .comment {
 
 	font-family: Menlo, "Courier New", monospace;
-	color: #6A9955;
+	color: #8AB975;
 
 }
 
@@ -78,13 +78,13 @@ div {
 
 a {
 
-	color: #569CD6;
+	color: #76BCF6;
 
 }
 
 a:hover {
 
-	color: #CE9178;
+	color: #EEB198;
 
 }
 
